Big SEIR update + Data fit notebooks

--- a/DataFit/SEIRHVD5_Datafit_SPDynamics_Parallel.ipynb
+++ b/DataFit/SEIRHVD5_Datafit_SPDynamics_Parallel.ipynb
@@ -414,7 +414,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f79aec21640>"
+       "<matplotlib.legend.Legend at 0x7fe16a58fc40>"
       ]
      },
      "execution_count": 14,
@@ -583,12 +583,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=8)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=8)]: Done   1 tasks      | elapsed:    3.0s\n",
-      "[Parallel(n_jobs=8)]: Done   2 out of   5 | elapsed:    3.0s remaining:    4.5s\n",
-      "[Parallel(n_jobs=8)]: Done   3 out of   5 | elapsed:    3.9s remaining:    2.6s\n",
-      "[Parallel(n_jobs=8)]: Done   5 out of   5 | elapsed:    5.4s remaining:    0.0s\n",
-      "[Parallel(n_jobs=8)]: Done   5 out of   5 | elapsed:    5.4s finished\n",
+      "[Parallel(n_jobs=12)]: Using backend LokyBackend with 12 concurrent workers.\n",
+      "[Parallel(n_jobs=12)]: Done   1 tasks      | elapsed:    2.9s\n",
+      "[Parallel(n_jobs=12)]: Done   2 out of   5 | elapsed:    3.0s remaining:    4.5s\n",
+      "[Parallel(n_jobs=12)]: Done   3 out of   5 | elapsed:    3.1s remaining:    2.1s\n",
+      "[Parallel(n_jobs=12)]: Done   5 out of   5 | elapsed:    4.4s remaining:    0.0s\n",
+      "[Parallel(n_jobs=12)]: Done   5 out of   5 | elapsed:    4.4s finished\n",
       "ready\n"
      ]
     }
@@ -621,7 +621,7 @@
    "outputs": [],
    "source": [
     "# Days to plot\n",
-    "days = 250\n",
+    "days = 500\n",
     "t_end = t_sp"
    ]
   },
@@ -670,16 +670,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RM.Br_dates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f79ca9a3ac0>"
+       "<matplotlib.legend.Legend at 0x7fe182266370>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,24 +716,24 @@
     "    axs[0,1].plot(dates[i],simulation[i].B,label='RenewalFactor: '+str(renewalFactor[i]),color=colors[i])\n",
     "axs[0,1].set_title('Hospitalized Accumulated Deaths')\n",
     "axs[0,1].set_xlim(initdate,datetime(2020,12,31))\n",
-    "axs[0,1].scatter(RM.hosp_dates,RM.Br_hosp,label='Muertes Hospitalizados')\n",
-    "axs[0,1].scatter(RM.hosp_dates,RM.Br_Nonhosp,color = 'red',label='Muertes No Hospitalizados')\n",
+    "axs[0,1].scatter(RM.Br_dates,RM.Br,label='Muertes')\n",
+    "#axs[0,1].scatter(RM.hosp_dates,RM.Br_Nonhosp,color = 'red',label='Muertes No Hospitalizados')\n",
     "axs[0,1].axvline(x = SPchange_date, linestyle = 'dotted',color = 'grey',label='Inicio Apertura')\n",
     "axs[0,1].axvline(x = fiestaspatrias, linestyle = 'dotted',color = 'red',label='18 Sept')\n",
     "axs[0,1].axvline(x = plebiscito, linestyle = 'dotted',color = 'blue',label='Plebiscito')\n",
     "axs[0,1].legend(loc=0)\n",
     "\n",
     "\n",
-    "for i in range(len(simulation)):    \n",
-    "    axs[1,0].plot(dates[i],simulation[i].Hse+simulation[i].Hout,label='RenewalFactor: '+str(renewalFactor[i]),color=colors[i])\n",
-    "axs[1,0].set_title('UTI Usage')\n",
-    "axs[1,0].set_xlim(initdate,datetime(2020,12,31))\n",
-    "axs[1,0].scatter(RM.sochimi_dates,RM.UTI)\n",
-    "axs[1,0].plot(dates[0],simulation[0].H_cap,label='UTI Capacity', linestyle = 'dashed', color = 'grey')\n",
-    "axs[1,0].axvline(x = SPchange_date, linestyle = 'dotted',color = 'grey',label='Inicio Apertura')\n",
-    "axs[1,0].axvline(x = fiestaspatrias, linestyle = 'dotted',color = 'red',label='18 Sept')\n",
-    "axs[1,0].axvline(x = plebiscito, linestyle = 'dotted',color = 'blue',label='Plebiscito')\n",
-    "axs[1,0].legend(loc=0)\n",
+    "#for i in range(len(simulation)):    \n",
+    "#    axs[1,0].plot(dates[i],simulation[i].Hse+simulation[i].Hout,label='RenewalFactor: '+str(renewalFactor[i]),color=colors[i])\n",
+    "#axs[1,0].set_title('UTI Usage')\n",
+    "#axs[1,0].set_xlim(initdate,datetime(2020,12,31))\n",
+    "#axs[1,0].scatter(RM.sochimi_dates,RM.UTI)\n",
+    "#axs[1,0].plot(dates[0],simulation[0].H_cap,label='UTI Capacity', linestyle = 'dashed', color = 'grey')\n",
+    "#axs[1,0].axvline(x = SPchange_date, linestyle = 'dotted',color = 'grey',label='Inicio Apertura')\n",
+    "#axs[1,0].axvline(x = fiestaspatrias, linestyle = 'dotted',color = 'red',label='18 Sept')\n",
+    "#axs[1,0].axvline(x = plebiscito, linestyle = 'dotted',color = 'blue',label='Plebiscito')\n",
+    "#axs[1,0].legend(loc=0)\n",
     "\n",
     "\n",
     "for i in range(len(simulation)):        \n",
@@ -741,18 +750,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.05713125351823005,\n",
+       " 0.0635882201789234,\n",
+       " 0.07003900986540046,\n",
+       " 0.07652593403702519,\n",
+       " 0.08294049715684915]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "SeroPrevalenceDet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'Figure' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-26-b905248c9263>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfig\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msimulation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0maxs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdates\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msimulation\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mV\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'RenewalFactor: '\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrenewalFactor\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcolors\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0maxs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_title\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'VMI Usage'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0maxs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_xlim\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minitdate\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2020\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m12\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m31\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'Figure' object is not callable"
+     ]
+    }
+   ],
    "source": [
     "fig(1,1)\n",
     "for i in range(len(simulation)):        \n",
@@ -1283,9 +1319,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.2 64-bit",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python38264bit48ae65e862f64697a29185f9fa581b02"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1297,7 +1333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
