--- a/Examples/SEIR_Saturation_Kinetics_Dynamics.ipynb
+++ b/Examples/SEIR_Saturation_Kinetics_Dynamics.ipynb
@@ -16,18 +16,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'SEIRmodel'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-2c09b6e18fab>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'../src/'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'src/'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mSEIRmodel\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSEIRmodel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdatetime\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'SEIRmodel'"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "from pathlib import Path\n",
-    "sys.path.insert(1, '../src/SEIR/')\n",
-    "sys.path.insert(1, 'src/SEIR/')\n",
+    "sys.path.insert(1, '../src/')\n",
+    "sys.path.insert(1, 'src/')\n",
     "from SEIRmodel import SEIRmodel\n",
     "import numpy as np\n",
     "from datetime import datetime\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib\n",
+    "matplotlib.use(\"TkAgg\")\n",
     "%matplotlib tk\n",
     "from joblib import Parallel, delayed\n",
     "import multiprocessing"
@@ -42,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,9 +138,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=8)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=8)]: Done   1 tasks      | elapsed:    1.8s\n",
+      "[Parallel(n_jobs=8)]: Done   2 out of   9 | elapsed:    1.9s remaining:    6.5s\n",
+      "[Parallel(n_jobs=8)]: Done   3 out of   9 | elapsed:    1.9s remaining:    3.9s\n",
+      "[Parallel(n_jobs=8)]: Done   4 out of   9 | elapsed:    2.0s remaining:    2.5s\n",
+      "[Parallel(n_jobs=8)]: Done   5 out of   9 | elapsed:    2.3s remaining:    1.8s\n",
+      "[Parallel(n_jobs=8)]: Done   6 out of   9 | elapsed:    2.3s remaining:    1.1s\n",
+      "[Parallel(n_jobs=8)]: Done   7 out of   9 | elapsed:    2.4s remaining:    0.7s\n",
+      "[Parallel(n_jobs=8)]: Done   9 out of   9 | elapsed:    2.4s remaining:    0.0s\n",
+      "[Parallel(n_jobs=8)]: Done   9 out of   9 | elapsed:    2.4s finished\n",
+      "[Parallel(n_jobs=8)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=8)]: Done   1 tasks      | elapsed:    0.4s\n",
+      "[Parallel(n_jobs=8)]: Done   2 out of   9 | elapsed:    0.4s remaining:    1.4s\n",
+      "[Parallel(n_jobs=8)]: Done   3 out of   9 | elapsed:    0.5s remaining:    1.0s\n",
+      "[Parallel(n_jobs=8)]: Done   4 out of   9 | elapsed:    0.6s remaining:    0.7s\n",
+      "[Parallel(n_jobs=8)]: Done   5 out of   9 | elapsed:    0.6s remaining:    0.5s\n",
+      "[Parallel(n_jobs=8)]: Done   6 out of   9 | elapsed:    0.6s remaining:    0.3s\n",
+      "[Parallel(n_jobs=8)]: Done   7 out of   9 | elapsed:    0.7s remaining:    0.2s\n",
+      "[Parallel(n_jobs=8)]: Done   9 out of   9 | elapsed:    0.8s remaining:    0.0s\n",
+      "[Parallel(n_jobs=8)]: Done   9 out of   9 | elapsed:    0.8s finished\n",
+      "[Parallel(n_jobs=8)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=8)]: Done   1 tasks      | elapsed:    0.4s\n",
+      "[Parallel(n_jobs=8)]: Done   2 out of   9 | elapsed:    0.5s remaining:    1.6s\n",
+      "[Parallel(n_jobs=8)]: Done   3 out of   9 | elapsed:    0.5s remaining:    1.0s\n",
+      "[Parallel(n_jobs=8)]: Done   4 out of   9 | elapsed:    0.5s remaining:    0.6s\n",
+      "[Parallel(n_jobs=8)]: Done   5 out of   9 | elapsed:    0.5s remaining:    0.4s\n",
+      "[Parallel(n_jobs=8)]: Done   6 out of   9 | elapsed:    0.5s remaining:    0.3s\n",
+      "[Parallel(n_jobs=8)]: Done   7 out of   9 | elapsed:    0.6s remaining:    0.2s\n",
+      "[Parallel(n_jobs=8)]: Done   9 out of   9 | elapsed:    0.8s remaining:    0.0s\n",
+      "[Parallel(n_jobs=8)]: Done   9 out of   9 | elapsed:    0.8s finished\n",
+      "[Parallel(n_jobs=8)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=8)]: Done   1 tasks      | elapsed:    0.4s\n",
+      "[Parallel(n_jobs=8)]: Done   2 out of   9 | elapsed:    0.4s remaining:    1.4s\n",
+      "[Parallel(n_jobs=8)]: Done   3 out of   9 | elapsed:    0.4s remaining:    0.8s\n",
+      "[Parallel(n_jobs=8)]: Done   4 out of   9 | elapsed:    0.5s remaining:    0.6s\n",
+      "[Parallel(n_jobs=8)]: Done   5 out of   9 | elapsed:    0.5s remaining:    0.4s\n",
+      "[Parallel(n_jobs=8)]: Done   6 out of   9 | elapsed:    0.5s remaining:    0.2s\n",
+      "[Parallel(n_jobs=8)]: Done   7 out of   9 | elapsed:    0.5s remaining:    0.1s\n",
+      "[Parallel(n_jobs=8)]: Done   9 out of   9 | elapsed:    0.7s remaining:    0.0s\n",
+      "[Parallel(n_jobs=8)]: Done   9 out of   9 | elapsed:    0.7s finished\n",
+      "[Parallel(n_jobs=8)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=8)]: Done   1 tasks      | elapsed:    0.4s\n",
+      "[Parallel(n_jobs=8)]: Done   2 out of   9 | elapsed:    0.4s remaining:    1.4s\n",
+      "[Parallel(n_jobs=8)]: Done   3 out of   9 | elapsed:    0.4s remaining:    0.8s\n",
+      "[Parallel(n_jobs=8)]: Done   4 out of   9 | elapsed:    0.4s remaining:    0.5s\n",
+      "[Parallel(n_jobs=8)]: Done   5 out of   9 | elapsed:    0.4s remaining:    0.4s\n",
+      "[Parallel(n_jobs=8)]: Done   6 out of   9 | elapsed:    0.5s remaining:    0.2s\n",
+      "[Parallel(n_jobs=8)]: Done   7 out of   9 | elapsed:    0.6s remaining:    0.2s\n",
+      "[Parallel(n_jobs=8)]: Done   9 out of   9 | elapsed:    0.7s remaining:    0.0s\n",
+      "[Parallel(n_jobs=8)]: Done   9 out of   9 | elapsed:    0.7s finished\n",
+      "[Parallel(n_jobs=8)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=8)]: Done   1 tasks      | elapsed:    0.3s\n",
+      "[Parallel(n_jobs=8)]: Done   2 out of   9 | elapsed:    0.4s remaining:    1.4s\n",
+      "[Parallel(n_jobs=8)]: Done   3 out of   9 | elapsed:    0.4s remaining:    0.8s\n",
+      "[Parallel(n_jobs=8)]: Done   4 out of   9 | elapsed:    0.4s remaining:    0.5s\n",
+      "[Parallel(n_jobs=8)]: Done   5 out of   9 | elapsed:    0.4s remaining:    0.3s\n",
+      "[Parallel(n_jobs=8)]: Done   6 out of   9 | elapsed:    0.4s remaining:    0.2s\n",
+      "[Parallel(n_jobs=8)]: Done   7 out of   9 | elapsed:    0.5s remaining:    0.1s\n",
+      "[Parallel(n_jobs=8)]: Done   9 out of   9 | elapsed:    0.6s remaining:    0.0s\n",
+      "[Parallel(n_jobs=8)]: Done   9 out of   9 | elapsed:    0.6s finished\n",
+      "[Parallel(n_jobs=8)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=8)]: Done   1 tasks      | elapsed:    0.3s\n",
+      "[Parallel(n_jobs=8)]: Done   2 out of   9 | elapsed:    0.4s remaining:    1.4s\n",
+      "[Parallel(n_jobs=8)]: Done   3 out of   9 | elapsed:    0.4s remaining:    0.9s\n",
+      "[Parallel(n_jobs=8)]: Done   4 out of   9 | elapsed:    0.4s remaining:    0.5s\n",
+      "[Parallel(n_jobs=8)]: Done   5 out of   9 | elapsed:    0.5s remaining:    0.4s\n",
+      "[Parallel(n_jobs=8)]: Done   6 out of   9 | elapsed:    0.5s remaining:    0.2s\n",
+      "[Parallel(n_jobs=8)]: Done   7 out of   9 | elapsed:    0.5s remaining:    0.1s\n",
+      "[Parallel(n_jobs=8)]: Done   9 out of   9 | elapsed:    0.6s remaining:    0.0s\n",
+      "[Parallel(n_jobs=8)]: Done   9 out of   9 | elapsed:    0.6s finished\n",
+      "[Parallel(n_jobs=8)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=8)]: Done   1 tasks      | elapsed:    0.3s\n",
+      "[Parallel(n_jobs=8)]: Done   2 out of   9 | elapsed:    0.4s remaining:    1.3s\n",
+      "[Parallel(n_jobs=8)]: Done   3 out of   9 | elapsed:    0.4s remaining:    0.8s\n",
+      "[Parallel(n_jobs=8)]: Done   4 out of   9 | elapsed:    0.4s remaining:    0.5s\n",
+      "[Parallel(n_jobs=8)]: Done   5 out of   9 | elapsed:    0.4s remaining:    0.3s\n",
+      "[Parallel(n_jobs=8)]: Done   6 out of   9 | elapsed:    0.4s remaining:    0.2s\n",
+      "[Parallel(n_jobs=8)]: Done   7 out of   9 | elapsed:    0.5s remaining:    0.1s\n",
+      "[Parallel(n_jobs=8)]: Done   9 out of   9 | elapsed:    0.6s remaining:    0.0s\n",
+      "[Parallel(n_jobs=8)]: Done   9 out of   9 | elapsed:    0.6s finished\n",
+      "[Parallel(n_jobs=8)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=8)]: Done   1 tasks      | elapsed:    0.4s\n",
+      "[Parallel(n_jobs=8)]: Done   2 out of   9 | elapsed:    0.4s remaining:    1.3s\n",
+      "[Parallel(n_jobs=8)]: Done   3 out of   9 | elapsed:    0.4s remaining:    0.8s\n",
+      "[Parallel(n_jobs=8)]: Done   4 out of   9 | elapsed:    0.4s remaining:    0.5s\n",
+      "[Parallel(n_jobs=8)]: Done   5 out of   9 | elapsed:    0.4s remaining:    0.3s\n",
+      "[Parallel(n_jobs=8)]: Done   6 out of   9 | elapsed:    0.4s remaining:    0.2s\n",
+      "[Parallel(n_jobs=8)]: Done   7 out of   9 | elapsed:    0.5s remaining:    0.1s\n",
+      "[Parallel(n_jobs=8)]: Done   9 out of   9 | elapsed:    0.6s remaining:    0.0s\n",
+      "[Parallel(n_jobs=8)]: Done   9 out of   9 | elapsed:    0.6s finished\n"
+     ]
+    }
+   ],
    "source": [
     "# Run  Parallel Simulation s\n",
     "sims = [] \n",
@@ -146,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
