--- a/DataFit/SEIRHVD_DataFit_SeroPrev.ipynb
+++ b/DataFit/SEIRHVD_DataFit_SeroPrev.ipynb
@@ -14,9 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linux\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -34,6 +42,9 @@
     "elif OS == 'Windows':\n",
     "    %matplotlib qt\n",
     "    print('Windows')\n",
+    "elif OS == 'Darwin':\n",
+    "    %matplotlib tk\n",
+    "    print('Mac (Funciona?)')    \n",
     "else:\n",
     "    print('OS not detected :-|')\n",
     "\n",
@@ -845,9 +856,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.2 64-bit",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python38264bit48ae65e862f64697a29185f9fa581b02"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -859,7 +870,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
