Update in real data fit notebooks

--- a/DataFit/14_LosRios_SEIRHVD5.ipynb
+++ b/DataFit/14_LosRios_SEIRHVD5.ipynb
@@ -48,7 +48,7 @@
     "    print('Windows')\n",
     "elif OS == 'Darwin':\n",
     "    %matplotlib tk\n",
-    "    print('Mac (Funciona?)')\n",
+    "    print('Mac')\n",
     "else:\n",
     "    print('OS not detected :-|')\n",
     "\n",
