--- a/DataFit/SEIRHVD_DataFit_SeroPrev.ipynb
+++ b/DataFit/SEIRHVD_DataFit_SeroPrev.ipynb
@@ -42,9 +42,9 @@
     "elif OS == 'Windows':\n",
     "    %matplotlib qt\n",
     "    print('Windows')\n",
-    "elif OS == 'Darwin':\n",
-    "    %matplotlib tk\n",
-    "    print('Mac (Funciona?)')    \n",
+    "    elif OS == 'Darwin':\n",
+    "        %matplotlib tk\n",
+    "        print('Mac')    \n",
     "else:\n",
     "    print('OS not detected :-|')\n",
     "\n",
