Examination Dynamics Notebooks

--- a/research/ExamDynamics/COVID19_Examination_Dynamics.ipynb
+++ b/research/ExamDynamics/COVID19_Examination_Dynamics.ipynb
@@ -98,9 +98,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linux\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "from pathlib import Path\n",
@@ -129,7 +137,7 @@
     "    print('OS not detected :-|')\n",
     "\n",
     "\n",
-    "from class_SEIR2 import SEIR\n",
+    "from class_SEIRQ import SEIR\n",
     "from Quarantine import Quarantine\n",
     "from Quarantine import Exams"
    ]
@@ -143,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +201,8 @@
    "source": [
     "examrate = 20000 # Persons per day\n",
     "period = 1\n",
-    "duty = 0.5 \n",
+    "duty = 1\n",
+    "# Construction of examination dynamics\n",
     "psi = Exams(examrate,period,duty) # "
    ]
   },
