--- a/DataFit/RM_Dic.ipynb
+++ b/DataFit/RM_Dic.ipynb
@@ -190,10 +190,10 @@
     "tsim = 1000\n",
     "t_sp = (SPchange_date - initdate).days\n",
     "beta = 0.12\n",
-    "mu = 1.6\n",
+    "mu = 1.4\n",
     "k_I = 0\n",
     "k_R = 0\n",
-    "SeroPrevFactor =0.07\n",
+    "SeroPrevFactor =0.060\n",
     "expinfection=0 # Proportion in which the exposed infect - 0: nothing, 1: equally as Infected"
    ]
   },
@@ -212,14 +212,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Region de los Rios\n",
-    "Ellos tuvieron cordón sanitario que comenzó el 12 de julio y el vienes 02 de Octubre entraron en Fase 2"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -230,7 +222,7 @@
     "#t_sp = (SPchange_date - initdate).days\n",
     "\n",
     "# Quarantines \n",
-    "max_mob = 0.85\n",
+    "max_mob = 0.45\n",
     "rem_mob = 0.45\n",
     "\n",
     "Q1 = Quarantine(rem_mob,max_mob,qp=0,iqt=0,fqt=t_sp)\n",
@@ -389,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,12 +393,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "increasedays = (fiestaspatrias - SPchange_date).days + 0\n",
-    "renewalFactor = 0.23\n",
+    "renewalFactor = 0#0.23\n",
     "dailyincrease = state.population*SeroPrevFactor*renewalFactor/increasedays\n",
     "t_sp_temp = t_sp + 0\n",
     "chi0 = SeroPrevDynamics(t_sp_temp+5,t_sp_temp+increasedays*0.7,t_sp_temp+increasedays,dailyincrease,form='line')\n",
@@ -417,16 +409,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "renewalFactor = [0.15,0.3,0.45,0.6,0.75]"
+    "renewalFactor = [0.15]#,0.3,0.45,0.6,0.75]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,16 +443,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fc0b4017af0>"
+       "<matplotlib.legend.Legend at 0x7f292caecd90>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +490,7 @@
        "datetime.datetime(2020, 5, 15, 0, 0)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,17 +501,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "InitialCondition Object Data\n",
-      "InitialCondition Object Data\n",
-      "InitialCondition Object Data\n",
-      "InitialCondition Object Data\n",
       "InitialCondition Object Data\n"
      ]
     }
@@ -537,17 +525,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Compartimental model State parameters changed\n",
-      "Compartimental model State parameters changed\n",
-      "Compartimental model State parameters changed\n",
-      "Compartimental model State parameters changed\n",
       "Compartimental model State parameters changed\n"
      ]
     }
@@ -608,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -627,11 +611,8 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=12)]: Using backend LokyBackend with 12 concurrent workers.\n",
-      "[Parallel(n_jobs=12)]: Done   1 tasks      | elapsed:    2.6s\n",
-      "[Parallel(n_jobs=12)]: Done   2 out of   5 | elapsed:    2.7s remaining:    4.0s\n",
-      "[Parallel(n_jobs=12)]: Done   3 out of   5 | elapsed:    2.9s remaining:    1.9s\n",
-      "[Parallel(n_jobs=12)]: Done   5 out of   5 | elapsed:    4.3s remaining:    0.0s\n",
-      "[Parallel(n_jobs=12)]: Done   5 out of   5 | elapsed:    4.3s finished\n",
+      "[Parallel(n_jobs=12)]: Done   1 tasks      | elapsed:    1.2s\n",
+      "[Parallel(n_jobs=12)]: Done   1 out of   1 | elapsed:    1.2s finished\n",
       "ready\n"
      ]
     }
@@ -654,12 +635,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Grid Plot"
+    "## Single plot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,20 +673,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Text(0.5, 0.98, 'Región Metropolitana')"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "colors = plt.cm.rainbow_r(np.linspace(0,1,len(renewalFactor)))\n",
+    "for i in range(len(simulation)):\n",
+    "    plt.plot(dates[i],simulation[i].I_ac_det,label='RF: '+str(renewalFactor[i])+' | SP_R: '+str(round(100*SeroPrevalence[i],2))+'%'+' | SP_D:'+str(round(100*SeroPrevalenceDet[i],2))+'%',color=colors[i])\n",
+    "plt.title('Accumulated Infected')\n",
+    "plt.xlim(initdate,enddate)\n",
+    "plt.scatter(state.I_ac_r_dates,state.I_ac_r)\n",
+    "#axs[0,0].axvline(x = SPchange_date, linestyle = 'dotted',color = 'grey',label='Inicio Apertura')\n",
+    "#axs[0,0].axvline(x = datetime(2020,8,22), linestyle = 'dotted',color = 'grey',label='Inicio Cuarentena')\n",
+    "plt.axvline(x = fiestaspatrias, linestyle = 'dotted',color = 'red',label='18 Sept')\n",
+    "plt.axvline(x = plebiscito, linestyle = 'dotted',color = 'blue',label='Plebiscito')\n",
+    "#axs[0,0].plot([], [], ' ', label='SeroPrevalence: '+str(round(100*SeroPrevalence[i],2))+'%')\n",
+    "#axs[0,0].plot([], [], ' ', label='SeroPrevalence Detected: '+str(round(100*SeroPrevalenceDet[i],2))+'%')\n",
+    "plt.axvline(x = datetime(2020,7,18), linestyle = 'dotted',color = 'grey',label='Cambio a fase 3')\n",
+    "plt.axvline(x = datetime(2020,9,11), linestyle = 'dashed',color = 'grey',label='Cambio a fase 4')\n",
+    "plt.axvline(x = datetime(2020,10,3), linestyle = 'dashdot',color = 'grey',label='Cambio a fase 2')\n",
+    "\n",
+    "plt.plot([], [], ' ', label='RF: RenewalFactor')\n",
+    "plt.plot([], [], ' ', label='SP_R: SeroPrevalence Real')\n",
+    "plt.plot([], [], ' ', label='SP_D: SeroPrevalence Detected')\n",
+    "plt.fmt_xdata = mdates.DateFormatter('%Y-%m-%d')\n",
+    "plt.legend(loc=0)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Grid Plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Days to plot\n",
+    "days = 500\n",
+    "t_end = t_sp\n",
+    "\n",
+    "enddate = initdate + timedelta(days=2*365)\n",
+    "enddate = datetime(2020,12,31)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dates = [[initdate+timedelta(days=i) for i in simulation[j].t] for j in range(len(simulation))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SeroPrevalence = [simulation[i].I_ac[-1]/simulation[i].population for i in range(len(simulation))]\n",
+    "SeroPrevalenceDet = [simulation[i].I_ac_det[-1]/simulation[i].population for i in range(len(simulation))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "colors = plt.cm.rainbow_r(np.linspace(0,1,len(renewalFactor)))\n",
     "\n",
